fix(service): 1:1 채팅 키워드 검색 수정 DP-260